--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "programs",
   "version": "0.0.0",
-  "license": "MIT",
+	"license": "UNLICENSED",
   "scripts": {},
   "private": true,
   "dependencies": {
