--- a/packages/partnerships/tsconfig.json
+++ b/packages/partnerships/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-		"esModuleInterop": true
+    "noFallthroughCasesInSwitch": true
   },
   "files": [],
   "include": [],
