--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@usher.so/auth": ["packages/auth/src/index.ts"],
+      "@usher.so/campaigns": ["packages/campaigns/src/index.ts"],
       "@usher.so/partnerships": ["packages/partnerships/src/index.ts"],
       "@usher.so/shared": ["packages/shared/src/index.ts"]
     }
