--- a/packages/shared/project.json
+++ b/packages/shared/project.json
@@ -35,6 +35,12 @@
         "jestConfig": "packages/shared/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "deploy": {
+      "executor": "ngx-deploy-npm:deploy",
+      "options": {
+        "access": "public"
+      }
     }
   },
   "tags": []
