--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,14 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
+    "esbuild": {
+      "dependsOn": ["^esbuild"],
+      "inputs": ["production", "^production"]
+    },
+    "ts": {
+      "dependsOn": ["^ts"],
+      "inputs": ["production", "^production"]
+    },
     "lint": {
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"]
     },
