--- a/packages/partnerships/package.json
+++ b/packages/partnerships/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@usher.so/partnerships",
   "version": "0.0.1",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "type": "module"
 }
