--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,24 @@
 {
-  "singleQuote": true
+  "plugins": [
+    "prettier-plugin-organize-imports"
+  ],
+  "semi": true,
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.yml",
+      "options": {
+        "useTabs": false
+      }
+    },
+    {
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "options": {
+        "parser": "typescript"
+      }
+    }
+  ]
 }
