--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ngx-deploy-npm": "^4.3.10",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
+    "prettier-plugin-organize-imports": "^3.2.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
