Format with prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,10 @@
   "plugins": [
     "prettier-plugin-organize-imports"
   ],
+  "tabWidth": 2,
+  "useTabs": true,
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "overrides": [
     {
       "files": "*.yml",
