--- a/.editorconfig
+++ b/.editorconfig
@@ -3,11 +3,16 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
+indent_style = tab
 indent_size = 2
-insert_final_newline = true
+tab_width = 2
+end_of_line = lf
 trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.yml]
+indent_style = space
