--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-  "name": "programs",
-  "version": "0.0.1",
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nx run-many --target=build",
-    "clean": "del dist",
-    "format": "nx format --libs-and-apps",
-    "lint": "nx workspace-lint"
-  },
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/usherlabs/programs.git"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "dependencies": {
-    "@aws-crypto/sha256-js": "^2.0.2",
-    "@ceramicnetwork/http-client": "^2.10.0",
-    "@glazed/datamodel": "^0.3.1",
-    "@glazed/did-datastore": "^0.3.2",
-    "@glazed/types": "^0.2.0",
-    "@jsdevtools/ono": "^7.1.3",
-    "@usher.so/datamodels": "^0.0.7",
-    "arweave": "1.11.4",
-    "dids": "^3.4.0",
-    "ethers": "5.6.8",
-    "js-base64": "^3.7.3",
-    "key-did-provider-ed25519": "^2.0.1",
-    "key-did-resolver": "^2.3.0",
-    "ky": "^0.32.2",
-    "lodash": "^4.17.21",
-    "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/esbuild": "15.2.1",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/jest": "15.2.1",
-    "@nrwl/js": "15.2.1",
-    "@nrwl/linter": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
-    "@types/jest": "28.1.1",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "del-cli": "^5.0.0",
-    "esbuild": "^0.15.7",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "ngx-deploy-npm": "^4.3.10",
-    "nx": "15.2.1",
-    "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^3.2.1",
-    "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
-  }
+	"name": "programs",
+	"version": "0.0.1",
+	"license": "UNLICENSED",
+	"scripts": {
+		"build": "nx run-many --target=build",
+		"clean": "del dist",
+		"format": "nx format --all",
+		"lint": "nx workspace-lint"
+	},
+	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/usherlabs/programs.git"
+	},
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/"
+	},
+	"dependencies": {
+		"@aws-crypto/sha256-js": "^2.0.2",
+		"@ceramicnetwork/http-client": "^2.10.0",
+		"@glazed/datamodel": "^0.3.1",
+		"@glazed/did-datastore": "^0.3.2",
+		"@glazed/types": "^0.2.0",
+		"@jsdevtools/ono": "^7.1.3",
+		"@usher.so/datamodels": "^0.0.7",
+		"arweave": "1.11.4",
+		"dids": "^3.4.0",
+		"ethers": "5.6.8",
+		"js-base64": "^3.7.3",
+		"key-did-provider-ed25519": "^2.0.1",
+		"key-did-resolver": "^2.3.0",
+		"ky": "^0.32.2",
+		"lodash": "^4.17.21",
+		"tslib": "^2.3.0"
+	},
+	"devDependencies": {
+		"@nrwl/cli": "15.2.1",
+		"@nrwl/esbuild": "15.2.1",
+		"@nrwl/eslint-plugin-nx": "15.2.1",
+		"@nrwl/jest": "15.2.1",
+		"@nrwl/js": "15.2.1",
+		"@nrwl/linter": "15.2.1",
+		"@nrwl/workspace": "15.2.1",
+		"@types/jest": "28.1.1",
+		"@types/lodash": "^4.14.191",
+		"@types/node": "18.7.1",
+		"@typescript-eslint/eslint-plugin": "^5.36.1",
+		"@typescript-eslint/parser": "^5.36.1",
+		"del-cli": "^5.0.0",
+		"esbuild": "^0.15.7",
+		"eslint": "~8.15.0",
+		"eslint-config-prettier": "8.1.0",
+		"jest": "28.1.1",
+		"jest-environment-jsdom": "28.1.1",
+		"ngx-deploy-npm": "^4.3.10",
+		"nx": "15.2.1",
+		"prettier": "^2.6.2",
+		"prettier-plugin-organize-imports": "^3.2.1",
+		"ts-jest": "28.0.5",
+		"ts-node": "10.9.1",
+		"typescript": "~4.8.2"
+	}
 }
