Resolve eslint complaint

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "nx run-many --target=build",
 		"clean": "del dist",
 		"format": "nx format --all",
-		"lint": "nx workspace-lint"
+		"lint": "nx run-many --target=lint"
 	},
 	"private": false,
 	"repository": {
