--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
 		"@glazed/did-datastore": "^0.3.2",
 		"@glazed/types": "^0.2.0",
 		"@jsdevtools/ono": "^7.1.3",
+		"@usher.so/campaigns": "link:./dist/packages/campaigns",
 		"@usher.so/datamodels": "^0.0.7",
+		"@usher.so/shared": "link:./dist/packages/shared",
 		"arweave": "1.11.4",
+		"commander": "^9.4.1",
 		"dids": "^3.4.0",
 		"ethers": "5.6.8",
 		"js-base64": "^3.7.3",
 		"key-did-provider-ed25519": "^2.0.1",
 		"key-did-resolver": "^2.3.0",
 		"ky": "^0.32.2",
+		"ky-universal": "^0.11.0",
 		"lodash": "^4.17.21",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"uint8arrays": "^4.0.2",
+		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@nrwl/cli": "15.2.1",
