--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@usher.so/datamodels": "^0.0.7",
 		"@usher.so/shared": "link:./dist/packages/shared",
 		"arweave": "1.11.4",
+		"camelcase-keys": "^8.0.2",
 		"commander": "^9.4.1",
 		"dids": "^3.4.0",
 		"ethers": "5.6.8",
@@ -37,6 +38,7 @@
 		"ky": "^0.32.2",
 		"ky-universal": "^0.11.0",
 		"lodash": "^4.17.21",
+		"snakecase-keys": "^5.4.4",
 		"tslib": "^2.3.0",
 		"uint8arrays": "^4.0.2",
 		"zod": "^3.20.2"
