added version to cli. Fixed typos. Ensure that ceramic production url is hosted by Usher

--- a/packages/cli/project.json
+++ b/packages/cli/project.json
@@ -45,6 +45,12 @@
 				"jestConfig": "packages/cli/jest.config.ts",
 				"passWithNoTests": true
 			}
+		},
+		"deploy": {
+			"executor": "ngx-deploy-npm:deploy",
+			"options": {
+				"access": "public"
+			}
 		}
 	},
 	"tags": []
