--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
 	},
 	"dependencies": {
 		"@aws-crypto/sha256-js": "^2.0.2",
+		"@bundlr-network/client": "^0.9.11",
 		"@ceramicnetwork/http-client": "^2.10.0",
 		"@glazed/datamodel": "^0.3.1",
 		"@glazed/did-datastore": "^0.3.2",
 		"@glazed/types": "^0.2.0",
 		"@jsdevtools/ono": "^7.1.3",
+		"@usher.so/campaigns": "link:./dist/packages/campaigns",
 		"@usher.so/datamodels": "^0.0.7",
+		"@usher.so/shared": "link:./dist/packages/shared",
 		"arweave": "1.11.4",
+		"bignumber.js": "^9.1.1",
 		"camelcase-keys": "^8.0.2",
 		"commander": "^9.4.1",
 		"dids": "^3.4.0",
