--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
 		"commander": "^9.4.1",
 		"dids": "^3.4.0",
 		"ethers": "5.6.8",
+		"got": "^12.5.3",
+		"isomorphic-unfetch": "^3.1.0",
 		"js-base64": "^3.7.3",
 		"key-did-provider-ed25519": "^2.0.1",
 		"key-did-resolver": "^2.3.0",
-		"ky": "^0.32.2",
+		"ky": "^0.33.1",
 		"ky-universal": "^0.11.0",
 		"lodash": "^4.17.21",
 		"snakecase-keys": "^5.4.4",
