--- a/packages/datamodels/tsconfig.json
+++ b/packages/datamodels/tsconfig.json
@@ -12,7 +12,7 @@
 	"include": [],
 	"references": [
 		{
-			"path": "./tsconfig.app.json"
+			"path": "./tsconfig.lib.json"
 		},
 		{
 			"path": "./tsconfig.spec.json"
