--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,10 +14,12 @@
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
 		"baseUrl": ".",
 		"paths": {
 			"@usher.so/auth": ["packages/auth/src/index.ts"],
 			"@usher.so/campaigns": ["packages/campaigns/src/index.ts"],
+			"@usher.so/datamodels": ["packages/datamodels/src/index.ts"],
 			"@usher.so/partnerships": ["packages/partnerships/src/index.ts"],
 			"@usher.so/shared": ["packages/shared/src/index.ts"]
 		}
