--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "nx run-many --target=build",
-		"clean": "del dist",
+		"clean": "del dist docs",
 		"format": "nx format --all",
-		"lint": "nx run-many --target=lint"
+		"lint": "nx run-many --target=lint",
+		"docs": "typedoc"
 	},
 	"private": false,
 	"repository": {
@@ -72,6 +73,7 @@
 		"prettier-plugin-organize-imports": "^3.2.1",
 		"ts-jest": "28.0.5",
 		"ts-node": "10.9.1",
+		"typedoc": "^0.23.23",
 		"typescript": "~4.8.2"
 	}
 }
