--- a/packages/partnerships/package.json
+++ b/packages/partnerships/package.json
@@ -2,5 +2,11 @@
 	"name": "@usher.so/partnerships",
 	"version": "0.0.1",
 	"license": "UNLICENSED",
-	"type": "module"
+	"type": "module",
+	"typedoc": {
+		"entryPoint": "./src/index.ts",
+		"readmeFile": "./README.md",
+		"displayName": "Usher Partnerships",
+		"tsconfig": "./tsconfig.lib.json"
+	}
 }
