--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,5 +4,10 @@
 	"type": "module",
 	"bin": {
 		"usher": "./bin/usher.js"
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/usherlabs/programs.git"
 	}
 }
