--- a/packages/datamodels/package.json
+++ b/packages/datamodels/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "@usher.so/datamodels",
-	"version": "0.0.1",
-	"license": "UNLICENSED",
-	"type": "module"
+	"version": "0.0.2",
+	"type": "module",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/usherlabs/programs.git"
+	}
 }
