--- a/packages/datamodels/package.json
+++ b/packages/datamodels/package.json
@@ -3,6 +3,12 @@
 	"version": "0.0.2",
 	"type": "module",
 	"license": "MIT",
+	"typedoc": {
+		"entryPoint": "./src/index.ts",
+		"readmeFile": "./README.md",
+		"displayName": "Usher Datamodels",
+		"tsconfig": "./tsconfig.lib.json"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/usherlabs/programs.git"
